# ZenTerm

./: .gitignore  Cargo.toml  DEVELOPMENT.md  PULL_REQUEST_TEMPLATE.md  README.md  package-lock.json  package.json
.github/: copilot-instructions.md
.github/workflows/: flatpak.yml  rust-ci.yml
apps/desktop/: Cargo.toml
apps/desktop/src/: cli.rs  logging.rs  main.rs
apps/desktop/src/config/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/event/: README.md  bus.rs  metrics.rs  mod.rs  payload.rs  prelude.rs  subscription.rs
crates/engine/: Cargo.toml
crates/engine/src/: command_registry.rs  config.rs  event_bus.rs  gpu.rs  gpu_mock.rs  lib.rs  shared_state.rs  theme.rs  voice_mock.rs  wizard.rs
crates/engine/src/ui/: app.rs  app_test.rs  mod.rs  palette.rs
issues/: 1.md
packaging/flatpak/: README.md  org.zenterm.ZenTerm.desktop  org.zenterm.ZenTerm.metainfo.xml  zenterm.flatpak.yaml
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/terminal/: mod.rs  pty.rs  session.rs
src/components/: TabBar.tsx  TerminalView.tsx
tests/: config_load.rs  smoke.rs
