[package]
name = "app-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.29"
engine = { path = "../../crates/engine" }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"