[package]
name = "app-desktop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zenterm"
path = "src/main.rs"

[dependencies]
engine = { path = "../../crates/engine" }
eframe = "0.27"
egui = "0.27"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
crossbeam-channel = "0.5"
tokio = { version = "1.0", features = ["time", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0"
