[package]
name = "zenterm-core"
version = "0.1.0"
edition = "2021"
description = "Core functionality for ZenTerm terminal emulator with AI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/linuxiano85/ZenTerm"

[features]
default = ["custom-payload"]
custom-payload = []
event-tracing = ["dep:tracing"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }