[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
crossterm = "0.27"
ratatui = "0.26"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"

[dev-dependencies]
tempfile = "3.0"